deployment/backend/studio/studio.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studio-deployment
  labels:
    mengtongun.com/app: studio
    mengtongun.com/stack: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      mengtongun.com/app: studio
  template:
    metadata:
      labels:
        mengtongun.com/app: studio
        mengtongun.com/stack: backend
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: registry-key
      containers:
      - name: studio
        image: ghcr.io/mengtongun/api-template:1.1.3
        args:
          - db:studio
